{
  "version": 4,
  "terraform_version": "0.12.12",
  "serial": 33,
  "lineage": "769d01a3-f5e6-a894-083b-621b77f181d6",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "ubuntu",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-02df9ea15c1778c9c",
            "arn": "arn:aws:ec2:eu-west-1:916245739953:instance/i-0b8659b717a7c087c",
            "associate_public_ip_address": true,
            "availability_zone": "eu-west-1a",
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "get_password_data": false,
            "iam_instance_profile": "ecsInstanceRole",
            "id": "i-0b8659b717a7c087c",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "amazon-linux-keypair",
            "monitoring": false,
            "primary_network_interface_id": "eni-0ce19d71ca2af3127",
            "private_dns": "ip-172-31-29-222.eu-west-1.compute.internal",
            "private_ip": "172.31.29.222",
            "public_dns": "ec2-3-248-223-153.eu-west-1.compute.amazonaws.com",
            "public_ip": "3.248.223.153",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "encrypted": false,
                "iops": 100,
                "volume_id": "vol-08e613e73281bad9f",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "security_groups": [
              "allow-ssh"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-19affc51",
            "tags": {
              "Name": "ubuntu"
            },
            "tenancy": "default",
            "timeouts": {
            },
            "vpc_security_group_ids": [
              "sg-09ee9775e566411e9"
            ]
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "allow-ssh",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:916245739953:security-group/sg-09ee9775e566411e9",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [
                  "::/0"
                ],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-09ee9775e566411e9",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [
                  "::/0"
                ],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              },
              {
                "cidr_blocks": [
                  "141.134.85.233/32"
                ],
                "description": "Jochen @ Home",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "194.78.171.126/32"
                ],
                "description": "",
                "from_port": 56733,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 56733
              },
              {
                "cidr_blocks": [
                  "194.78.171.126/32"
                ],
                "description": "SSH for Ordina",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "84.197.77.212/32"
                ],
                "description": "SSH for home",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "allow-ssh",
            "name_prefix": null,
            "owner_id": "916245739953",
            "revoke_rules_on_delete": null,
            "tags": {},
            "timeouts": {
              "create": null,
              "delete": null
            },
            "vpc_id": "vpc-222d3b44"
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "allow-ssh",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "",
            "from_port": 80,
            "id": "sgrule-1414903088",
            "ipv6_cidr_blocks": [],
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-09ee9775e566411e9",
            "self": false,
            "source_security_group_id": null,
            "to_port": 80,
            "type": "ingress"
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "allow-ssh-1",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [],
            "description": "",
            "from_port": 80,
            "id": "sgrule-3661899518",
            "ipv6_cidr_blocks": [
              "::/0"
            ],
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-09ee9775e566411e9",
            "self": false,
            "source_security_group_id": null,
            "to_port": 80,
            "type": "ingress"
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "allow-ssh-2",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "194.78.171.126/32",
              "84.197.77.212/32",
              "141.134.85.233/32"
            ],
            "description": "SSH for Ordina",
            "from_port": 22,
            "id": "sgrule-462141694",
            "ipv6_cidr_blocks": [],
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-09ee9775e566411e9",
            "self": false,
            "source_security_group_id": null,
            "to_port": 22,
            "type": "ingress"
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "allow-ssh-3",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "194.78.171.126/32"
            ],
            "description": "",
            "from_port": 56733,
            "id": "sgrule-3813013265",
            "ipv6_cidr_blocks": [],
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-09ee9775e566411e9",
            "self": false,
            "source_security_group_id": null,
            "to_port": 56733,
            "type": "ingress"
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "allow-ssh-4",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "",
            "from_port": 0,
            "id": "sgrule-1649713034",
            "ipv6_cidr_blocks": [],
            "prefix_list_ids": [],
            "protocol": "-1",
            "security_group_id": "sg-09ee9775e566411e9",
            "self": false,
            "source_security_group_id": null,
            "to_port": 0,
            "type": "egress"
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "allow-ssh-5",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [],
            "description": "",
            "from_port": 0,
            "id": "sgrule-735447551",
            "ipv6_cidr_blocks": [
              "::/0"
            ],
            "prefix_list_ids": [],
            "protocol": "-1",
            "security_group_id": "sg-09ee9775e566411e9",
            "self": false,
            "source_security_group_id": null,
            "to_port": 0,
            "type": "egress"
          }
        }
      ]
    }
  ]
}